# mvqai

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: tee_3d.yaml
configs/loss/: hybrid_cldice.yaml  masked_mse.yaml
configs/model/: attention_unet.yaml  dynunet.yaml  unet.yaml
configs/trainer/: default.yaml
docker/: Dockerfile
docs/: project_architecture.html
scripts/: mrk_to_heatmap.py
src/: __init__.py  lightning_module.py  train.py
src/datamodules/: __init__.py  tee_datamodule.py
src/losses/: __init__.py  combined.py  masked_mse.py  soft_cldice.py
src/networks/: __init__.py  monai_wrappers.py
