[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvq"
version = "0.1.0"
description = "Mitral and aortic valve quantification with Hydra, Lightning, and MONAI."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "hydra-core>=1.3,<1.4",
  "lightning>=2.4,<2.6",
  "monai>=1.4,<1.5",
  "nibabel>=5.2,<6.0",
  "numpy>=1.26,<3.0",
  "scipy>=1.13,<2.0",
  "torch>=2.5,<2.8",
  "wandb>=0.19,<0.21",
]

[tool.setuptools.packages.find]
include = ["src*"]
